<resources>
    <string name="app_name">Shop</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bakso">Bakso</string>
    <string name="_10_000">10.000</string>
    <string name="button_delete">Button Delete</string>
    <string name="button_edit">Button Edit</string>
    <string name="tambah">Tambah</string>
    <string name="total_produk">Total Produk</string>
    <string name="_0_item">0 Item</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="proses">Proses</string>
    <string name="stok_produk">Stok Produk</string>
</resources>